<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
	android:background="#FFFFCC00"    >
    <ImageButton 
        android:id="@+id/small_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:layout_weight="1"
        android:contentDescription="@string/sml"
        android:src="@drawable/small_size"/>
    
    <ImageButton 
        android:id="@+id/medium_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/med"
        android:src="@drawable/medium_size" />
    
    <ImageButton
        android:id="@+id/large_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/lrg"
        android:src="@drawable/large_size" />
    <!-- Then add three new xml files for each brush in drawable -->
    
</LinearLayout>